# online_dvrk_tracking

./: .gitignore  .gitmodules  LND.json  README.md  pyproject.toml  requirements.txt  setup.py  surgpose_tracking.sh  synthetic_tracking.sh
ContourTipNet/: comparison.py  data_generation.py  dataset.py  model.py  model_2d.py  test.py  test_2d.py  train.py  train_2d.py  utils.py  visualize_1d.py  visualize_2d.py
ContourTipNet/models/: ctn_model.pth  ctn_model_best_val.pth  ctn_model_emd.pth
SurgicalSAM2/: .gitignore  README.md  generate_surgpose_mask.py  online_video_predict.py  process_surgpose_video.py
SurgicalSAM2/checkpoints/: download_ckpts.sh
SurgicalSAM2/sam2/: benchmark.py  build_sam.py  sam2_video_predictor.py
SurgicalSAM2/sav_dataset/: endo_sav_evaluator.py
SurgicalSAM2/tools/: vos_inference.py
TuRBO/turbo/: turbo_1.py
diffcali/utils/: cma_es.py  (+13 more)
scripts/: axis_angle_transform.py  bimanual_tracking.py  cotracker_test.py  data_manipulate.py  emkf.py  energy_distance_loss.py  generalized_geodesic_transform.py  generate_synthetic_data.py  generate_synthetic_masks.py  gp.py  gp_data.pt  jpda_tracking.py  kalman_filter.py  morphological_convex_hull.py  online_tracking.py  origin_retracing.py  particle_filter_tracking.py  plot_surgpose_joint.py  process_surgpose_video.py  render_surgpose.py  robust_kernel.py  scratch_synthetic_data.py  sequential_tracking.py  skeleton_test.py  synthetic_tracking.py  test_geomloss.py  test_mfa.py  test_render.py  video_annotator.py  video_generator.py
tests/: test_click_pts.py  test_line_detection.py
urdfs/: PSM1.urdf
(+26 files in other folders)
